<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:drawableRight="@drawable/user"
            android:paddingRight="20dp"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ErrorTitele"
            android:text="    خطای دسترسی"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingRight="20dp"
        android:gravity="center_vertical"
        android:text="برای استفاده از قسمت های مختلف برنامه باید ثبت نام کنید"
        />
    <LinearLayout
        android:id="@+id/l_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="bottom"
            android:paddingRight="20dp"
            style="@style/Title"
            android:text="@string/title_mybiyab"
            android:layout_weight="1"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/etphone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:paddingRight="30dp"
            style="@style/Widget.AppCompat.EditText"
            android:inputType="number"
            android:drawableLeft="@drawable/phone"
            android:layout_margin="10dp"
            android:hint="@string/mobile"/>
        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/Singin"
            android:background="@drawable/shape_recycleview"
            android:layout_margin="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <Button
            android:id="@+id/btndialog_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="ثبت نام سریع"
            android:paddingTop="10dp"
            style="@style/Button"
            android:background="@drawable/shape_recycleview"/>
        <Button
            android:id="@+id/btndialog_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="بستن"
            android:paddingTop="10dp"
            style="@style/Button"
            android:background="@drawable/shape_recycleview"/>
    </LinearLayout>



</LinearLayout>